--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -1,27 +1,39 @@
 appdirs==1.4.3
 appnope==0.1.0
+audioread==2.1.4
 bleach==2.0.0
+click==6.7
+cycler==0.10.0
+Cython==0.25.2
 decorator==4.0.11
 entrypoints==0.2.2
+graphviz==0.7
 html5lib==0.999999999
+httplib2==0.10.3
 ipykernel==4.6.1
 ipython==6.0.0
 ipython-genutils==0.2.0
 ipywidgets==6.0.0
 jedi==0.10.2
 Jinja2==2.9.6
+joblib==0.11
 jsonschema==2.6.0
 jupyter==1.0.0
 jupyter-client==5.0.1
 jupyter-console==5.1.0
 jupyter-core==4.3.0
 Keras==2.0.4
+librosa==0.5.0
 MarkupSafe==1.0
+matplotlib==2.0.1
 mistune==0.7.4
 nbconvert==5.1.1
 nbformat==4.3.0
 notebook==5.0.0
+numexpr==2.6.2
 numpy==1.12.1
+oauth2==1.9.0.post1
+oauthlib==2.0.2
 packaging==16.8
 pandocfilters==1.4.1
 pexpect==4.2.1
@@ -29,15 +41,23 @@ pickleshare==0.7.4
 prompt-toolkit==1.0.14
 protobuf==3.2.0
 ptyprocess==0.5.1
+pydot==1.2.3
 Pygments==2.2.0
 pyparsing==2.2.0
 python-dateutil==2.6.0
+pytz==2017.2
 PyYAML==3.12
 pyzmq==16.0.2
 qtconsole==4.3.0
+rauth==0.7.3
+requests==2.13.0
+requests-oauthlib==0.8.0
+resampy==0.1.5
+scikit-learn==0.18.1
 scipy==0.19.0
 simplegeneric==0.8.1
 six==1.10.0
+tables==3.4.2
 tensorflow==1.1.0
 terminado==0.6
 testpath==0.3
